k8s/sample-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
          imagePullPolicy: Always
          name: app-2048
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sample-app  # use the same group-name to share the ALB (they cost money!)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]' # enable SSL (the ALB-Controller automatically searches for the HOST specified in the rules below and pegs a matching cert to the ALB)
    external-dns.alpha.kubernetes.io/hostname: 2048.yamasa.link # if you have a custom domain, add it here and in the TF variable. (this supports a comma-separated list)
spec:
  ingressClassName: alb
  rules:

    # catch-all rule for the ingress (all domains, all paths)
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80

    # uncomment below to route traffic only to this ingress, if host is 2048.example.com (and comment out block above)
    #    - host: 2048.example.com
    #      http: &http_rules
    #        paths:
    #          - path: /
    #            pathType: Prefix
    #            backend:
    #              service:
    #                name: service-2048
    #                port:
    #                  number: 80

    # uncomment below to route traffic to this ingress, ALSO for requests that contain host-header for 2048.example.edu
    #           i.e. if this ingress should serve multiple domains.
    #    - host: 2048.example.edu
    #      http: *http_rules  # this referenced the rules above, so they don't have to be repeated.
